fixed sizing of svg's and spacing

--- a/style.css
+++ b/style.css
@@ -169,30 +169,21 @@ section {
   background-attachment: fixed;
   padding-bottom: 20px;
 }
-.socials {
-  color: aliceblue;
-  min-width: 375px;
-  justify-content: space-evenly;
-}
 
 .socials-list {
   width: 100%;
+  margin-left: -10%;
+  margin-right: -10%;
   color: aliceblue;
-  display: inline-block;
+  display: inline-flex;
+  justify-content: space-between;
   list-style-type: none;
   text-align: center;
-  text-justify: distribute;
 }
 .socials-list li {
   display: inline-block;
   color: aliceblue;
   margin-top: 35px;
-  /* margin-left: 2.5%; */
   width: 15%;
   max-width: 100px;
-}
-#socials-list li a img {
-  fill: aliceblue !important;
-  color: aliceblue;
-  fill-opacity: inherit;
 }
